[gd_scene load_steps=8 format=2]

[ext_resource path="res://Characters/Others/controller.tscn" type="PackedScene" id=1]
[ext_resource path="res://Characters/Player/godot.png" type="Texture" id=2]
[ext_resource path="res://Characters/Player/player.gd" type="Script" id=3]
[ext_resource path="res://Characters/Player/Camera2D.gd" type="Script" id=4]
[ext_resource path="res://Interface/Stats/Stats.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31, 31 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40, 36 )

[node name="player" type="KinematicBody2D" groups=[
"player",
]]
z_index = 1
z_as_relative = false
collision_mask = 20
script = ExtResource( 3 )
max_health = 3
bullet_damage = 1
spawn_scene_path = "res://Levels/Level1_1.tscn"
spawn_coordinates = Vector2( 19, 3 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="HUD" parent="HUD" instance=ExtResource( 5 )]

[node name="sprite" type="Sprite" parent="."]
modulate = Color( 0, 1, 0, 1 )
texture = ExtResource( 2 )

[node name="controller" parent="." instance=ExtResource( 1 )]

[node name="collision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="muzzle_pos" type="Position2D" parent="."]

[node name="hitbox" type="Area2D" parent="."]
position = Vector2( 0, -4 )
collision_layer = 8
collision_mask = 34

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_right = 10000
limit_bottom = 10000
smoothing_enabled = true
script = ExtResource( 4 )

[node name="shoot_cooldown" type="Timer" parent="."]
wait_time = 0.3

[node name="damage_disabled_timer" type="Timer" parent="."]
wait_time = 0.3
[connection signal="collectable_get" from="." to="HUD/HUD" method="_on_player_collectable_get"]
[connection signal="health_changed" from="." to="HUD/HUD" method="_on_player_health_changed"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="shoot_cooldown" to="." method="_on_shoot_cooldown_timeout"]
[connection signal="timeout" from="damage_disabled_timer" to="." method="_on_damage_disabled_timer_timeout"]
